<resources>

    <string name="app_name">Treino&amp;Dieta</string>

    <!--Botões-->
    <string name="btnVoltar">Voltar</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnCalcular">Calcular</string>

    <!--MainActivity-->
    <string name="labelMedidasPessoa">Medidas Corporal</string>
    <string name="labelContadorCalorias">Contador de Calorias</string>
    <string name="labelCalculoImc">Cálculo IMC</string>
    <string name="labelHistoricoMedidas">Histórico de Medidas</string>
    <string name="labelistoricoMedidas">Histórico de Medidas</string>
    <string name="labelPesoAvaliacoes">Peso e avaliações</string>
    <string name="labelOpcaoExercicioDiario">Opção de exercício diário</string>

    <!--Tela de medidas-->
    <string name="antebracoE">Antebraço(E):</string>
    <string name="antebracoD">Antebraço(D):</string>
    <string name="bracoE">Braço(E):</string>
    <string name="bracoD">Braço(D):</string>
    <string name="cintura">Cintura:</string>
    <string name="quadril">Quadril:</string>
    <string name="pernaE">Perna(E):</string>
    <string name="pernaD">Perna(D):</string>
    <string name="peito">Peito:</string>
    <string name="medidasCorporal">Medidas Corporal</string>

    <!--Tela IMC-->
    <string name="imc">IMC:</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>

    <!--Tela Contador Calorias-->
    <string name="contadorCalorias">Contador Calorias</string>
    <string name="caloriasDiarias">Calorias diárias:</string>
    <string name="caloriasConsumidas">Calorias consumidas:</string>
    <string name="caloriasDisponiveis">Calorias disponíveis:</string>


    <string name="salvoSucesso">Salvo com Sucesso!</string>
    <string name="treinoDieta">Treino e Dieta</string>





</resources>