<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculoImcActivity">

    <LinearLayout
        android:id="@+id/linearLayoutImagem"
        android:layout_width="match_parent"
        android:layout_height="600px"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgViewLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/imc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPesoCorporal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutImagem">

        <TextView
            android:id="@+id/txtPesoCorporal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtPesoCorporal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPesoCorporal">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAltura">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:text="@string/btnLimpar" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:text="@string/btnCalcular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResultadoImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAltura">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textSize="25dp"
            android:text="@string/imc"
            android:layout_marginTop="45dp">
        </TextView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>