<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContadorCaloriasActivity">

    <LinearLayout
        android:id="@+id/linearLayoutImagem"
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgViewLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/contador_calorias" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutImagem">

    <TextView
        android:id="@+id/txtContadorCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contadorCalorias"
        android:gravity="center"
        android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCaloriasDiarias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitulo">

        <TextView
            android:id="@+id/txtCaloriasDiarias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriasDiarias"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtCaloriasDiarias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCaloriasConsumidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCaloriasDiarias">

        <TextView
            android:id="@+id/txtCaloriasConsumidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriasConsumidas"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtCaloriasConsumidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCaloriasConsumidas">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:text="@string/btnCalcular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResultadoCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBotoes">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textSize="25dp"
            android:text="@string/caloriasDisponiveis"
            android:layout_marginTop="8dp">
        </TextView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
